RESOLVED FIXED84050
WebKit2 back/forward items in the page cache are never removed when the page is closed
https://bugs.webkit.org/show_bug.cgi?id=84050
Summary WebKit2 back/forward items in the page cache are never removed when the page ...
Brady Eidson
Reported 2012-04-16 10:26:55 PDT
WebKit2 back/forward items in the page cache are never removed when the page is closed In radar as <rdar://problem/11249336>
Attachments
Patch v1 (4.48 KB, patch)
2012-04-16 10:32 PDT, Brady Eidson
jberlin: review+
Brady Eidson
Comment 1 2012-04-16 10:32:49 PDT
Created attachment 137363 [details] Patch v1
Jon Lee
Comment 2 2012-04-16 10:37:46 PDT
Comment on attachment 137363 [details] Patch v1 r+ from me, but I'm not an official reviewer.
Brady Eidson
Comment 3 2012-04-16 11:01:48 PDT
Note You need to log in before you can comment on or make changes to this bug.