<rdar://problem/11249336> and https://bugs.webkit.org/show_bug.cgi?id=84050 WebKit2 back/forward items in the page cache are never removed when the page is closed

Reviewed by Jessie Berlin and unofficially reviewed by Jon Lee.

Source/WebCore:

* WebCore.exp.in: Export PageCache::remove()

Source/WebKit2:

Individual WebBackForwardListProxy's had no idea which items are associated with them.
This adds that association and makes sure the proxy removes all associated items from the PageCache when it closes.

* WebProcess/WebPage/WebBackForwardListProxy.cpp:
(WebKit::WebBackForwardListProxy::removeItem): Remove the item from the PageCache in case it was in it.
(WebKit::WebBackForwardListProxy::addItem): Add the item ID to this back/forward list's set of associated IDs.
(WebKit::WebBackForwardListProxy::close): Remove each associated item from the PageCache.
* WebProcess/WebPage/WebBackForwardListProxy.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@114278 bbb929c8-8fbe-4397-9dbb-9b2b20218538