third_party/WebKit/Source/WebKit2/WebProcess/WebPage/WebBackForwardListProxy.cpp
@@ -35,6 +35,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "WebProcess.h"
 #include "WebProcessProxyMessages.h"
 #include <WebCore/HistoryItem.h>
+#include <WebCore/PageCache.h>
 #include <wtf/HashMap.h>
 
 using namespace WebCore;
@@ -129,6 +130,9 @@ void WebBackForwardListProxy::removeItem(uint64_t itemID)
     IDToHistoryItemMap::iterator it = idToHistoryItemMap().find(itemID);
     if (it == idToHistoryItemMap().end())
         return;
+        
+    WebCore::pageCache()->remove(it->second.get());
+
     historyItemToIDMap().remove(it->second);
     idToHistoryItemMap().remove(it);
 }
@@ -151,6 +155,8 @@ void WebBackForwardListProxy::addItem(PassRefPtr<HistoryItem> prpItem)
     uint64_t itemID = generateHistoryItemID();
 
     ASSERT(!idToHistoryItemMap().contains(itemID));
+
+    m_associatedItemIDs.add(itemID);
 
     historyItemToIDMap().set(item, itemID);
     idToHistoryItemMap().set(itemID, item);
@@ -210,6 +216,12 @@ int WebBackForwardListProxy::forwardListCount()
 
 void WebBackForwardListProxy::close()
 {
+    HashSet<uint64_t>::iterator end = m_associatedItemIDs.end();
+    for (HashSet<uint64_t>::iterator i = m_associatedItemIDs.begin(); i != end; ++i)
+        WebCore::pageCache()->remove(itemForID(*i));
+
+    m_associatedItemIDs.clear();
+
     m_page = 0;
 }
 
