third_party/WebKit/Source/WebKit2/WebProcess/WebPage/WebBackForwardListProxy.h
@@ -28,6 +28,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #define WebBackForwardListProxy_h
 
 #include <WebCore/BackForwardList.h>
+#include <wtf/HashSet.h>
 #include <wtf/PassRefPtr.h>
 
 namespace WebKit {
@@ -63,6 +64,7 @@ private:
     virtual void close();
 
     WebPage* m_page;
+    HashSet<uint64_t> m_associatedItemIDs;
 };
 
 } // namespace WebKit
